@@ -2,23 +2,13 @@ package dev.leonardpark.ffmpeg.config.swagger;
 
 import org.springframework.beans.BeansException;
 import org.springframework.beans.factory.config.BeanPostProcessor;
-import org.springframework.boot.actuate.autoconfigure.endpoint.web.CorsEndpointProperties;
-import org.springframework.boot.actuate.autoconfigure.endpoint.web.WebEndpointProperties;
-import org.springframework.boot.actuate.autoconfigure.web.server.ManagementPortType;
-import org.springframework.boot.actuate.endpoint.ExposableEndpoint;
-import org.springframework.boot.actuate.endpoint.web.*;
-import org.springframework.boot.actuate.endpoint.web.annotation.ControllerEndpointsSupplier;
-import org.springframework.boot.actuate.endpoint.web.annotation.ServletEndpointsSupplier;
-import org.springframework.boot.actuate.endpoint.web.servlet.WebMvcEndpointHandlerMapping;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.env.Environment;
 import org.springframework.util.ReflectionUtils;
 import org.springframework.web.servlet.mvc.method.RequestMappingInfoHandlerMapping;
 import springfox.documentation.PathProvider;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
-import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.spring.web.plugins.WebFluxRequestHandlerProvider;
@@ -26,10 +16,7 @@ import springfox.documentation.spring.web.plugins.WebMvcRequestHandlerProvider;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.lang.reflect.Field;
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableSwagger2
@@ -54,28 +41,11 @@ public class Config {
         }
       })
       .select()
-      .apis(RequestHandlerSelectors.basePackage("dev.leonardpark.ffmpeg.controller"))
+//      .apis(RequestHandlerSelectors.basePackage("dev.leonardpark.ffmpeg.controller"))
       .paths(PathSelectors.any())
       .build()
       .useDefaultResponseMessages(false);
   }
-
-//  @Bean
-//  public WebMvcEndpointHandlerMapping webEndpointServletHandlerMapping(
-//    WebEndpointsSupplier webEndpointsSupplier, ServletEndpointsSupplier servletEndpointsSupplier,
-//    ControllerEndpointsSupplier controllerEndpointsSupplier, EndpointMediaTypes endpointMediaTypes,
-//    CorsEndpointProperties corsProperties, WebEndpointProperties webEndpointProperties, Environment environment) {
-//    List<ExposableEndpoint<?>> allEndpoints = new ArrayList<>();
-//    Collection<ExposableWebEndpoint> webEndpoints = webEndpointsSupplier.getEndpoints();
-//    allEndpoints.addAll(webEndpoints);
-//    allEndpoints.addAll(servletEndpointsSupplier.getEndpoints());
-//    allEndpoints.addAll(controllerEndpointsSupplier.getEndpoints());
-//    String basePath = webEndpointProperties.getBasePath();
-//    EndpointMapping endpointMapping = new EndpointMapping(basePath);
-//    boolean shouldRegisterLinksMapping = webEndpointProperties.getDiscovery().isEnabled() &&
-//      (org.springframework.util.StringUtils.hasText(basePath) || ManagementPortType.get(environment).equals(ManagementPortType.DIFFERENT));
-//    return new WebMvcEndpointHandlerMapping(endpointMapping, webEndpoints, endpointMediaTypes, corsProperties.toCorsConfiguration(), new EndpointLinksResolver(allEndpoints, basePath), shouldRegisterLinksMapping);
-//  }
 
   @Bean
   public static BeanPostProcessor springfoxHandlerProviderBeanPostProcessor() {
@@ -90,9 +60,7 @@ public class Config {
       }
 
       private <T extends RequestMappingInfoHandlerMapping> void customizeSpringfoxHandlerMappings(List<T> mappings) {
-        List<T> copy = mappings.stream()
-          .filter(mapping -> mapping.getPatternParser() == null)
-          .collect(Collectors.toList());
+        List<T> copy = mappings.stream().filter(mapping -> mapping.getPatternParser() == null).toList();
         mappings.clear();
         mappings.addAll(copy);
       }
